--- a/style.css
+++ b/style.css
@@ -13,14 +13,14 @@
 
 body{
   height: 100vh;
-  font-family: "Montserrat", 'sans-serif';
+  font-family: "Montserrat", sans-serif;
   background-color: var(--cor-fundo);
   color: var(--cor-texto);
 }
 
 .apresentaçao{
   display: flex;
-  margin: 10%;
+  margin: 10% 15%;
   align-items: center;
   justify-content: space-between;
 }
@@ -45,6 +45,9 @@ color:var(--cor-texto);
 
 .apresentacao__conteudo{
   width:615px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
 }
 
 .apresentacao__conteudo__titulo{
@@ -53,4 +56,8 @@ color:var(--cor-texto);
 }
 .apresentacao__conteudo__texto{
   font-size: 24px; 
+  font-family: 'Montserrat', sans-serif; 
 }
+
+.apresentacao__links{
+ display: flex;
